--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "bootstrap": "^5.2.3",
     "classnames": "^2.3.2",
     "dotenv": "^16.0.3",
+    "dotenv-webpack": "^8.0.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
     "react-hook-form": "^7.43.3",
