--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "classnames": "^2.3.2",
     "dotenv": "^16.0.3",
     "dotenv-webpack": "^8.0.1",
+    "mdb-react-ui-kit": "^5.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
