--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
     "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.43.3",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
