--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
-    "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.43.3",
     "react-icons": "^4.7.1",
@@ -27,6 +26,7 @@
     "react-select": "^5.7.0",
     "react-toastify": "^9.1.1",
     "sass": "^1.58.3",
+    "socket.io-client": "^4.6.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
