--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "classnames": "^2.3.2",
     "dotenv": "^16.0.3",
     "dotenv-webpack": "^8.0.1",
+    "html-react-parser": "^3.0.15",
     "mdb-react-ui-kit": "^5.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
@@ -20,6 +21,7 @@
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.43.3",
     "react-icons": "^4.7.1",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
